WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115270
[WKTR] Tests dumping audio data shouldn't dump pixels
https://bugs.webkit.org/show_bug.cgi?id=115270
Summary
[WKTR] Tests dumping audio data shouldn't dump pixels
Zan Dobersek
Reported
2013-04-26 11:29:50 PDT
[WKTR] Tests dumping audio data shouldn't dump pixels
Attachments
Patch
(13.67 KB, patch)
2013-04-26 11:33 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2
(507.88 KB, application/zip)
2013-04-26 13:17 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2013-04-26 11:33:03 PDT
Created
attachment 199850
[details]
Patch
Build Bot
Comment 2
2013-04-26 13:17:31 PDT
Comment on
attachment 199850
[details]
Patch
Attachment 199850
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/214121
New failing tests: fast/frames/crash-remove-iframe-during-object-beforeload.html
Build Bot
Comment 3
2013-04-26 13:17:33 PDT
Created
attachment 199854
[details]
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.2
Benjamin Poulain
Comment 4
2013-04-27 18:31:31 PDT
Comment on
attachment 199850
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=199850&action=review
> Tools/WebKitTestRunner/InjectedBundle/TestRunner.cpp:383 > WKRetainPtr<WKDataRef> audioData(AdoptWK, WKBundleCreateWKDataFromUInt8Array(InjectedBundle::shared().bundle(), context, data)); > InjectedBundle::shared().setAudioResult(audioData.get()); > m_whatToDump = Audio; > + m_dumpPixels = false;
Maybe rename setAudioData to setAudioResult?
Zan Dobersek
Comment 5
2013-04-28 05:34:28 PDT
Comment on
attachment 199850
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=199850&action=review
>> Tools/WebKitTestRunner/InjectedBundle/TestRunner.cpp:383 >> + m_dumpPixels = false; > > Maybe rename setAudioData to setAudioResult?
Sounds better. I'll do that in a separate patch.
Zan Dobersek
Comment 6
2013-04-28 05:38:16 PDT
Comment on
attachment 199850
[details]
Patch Clearing flags on attachment: 199850 Committed
r149258
: <
http://trac.webkit.org/changeset/149258
>
Zan Dobersek
Comment 7
2013-04-28 05:38:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug