[WKTR] Tests dumping audio data shouldn't dump pixels https://bugs.webkit.org/show_bug.cgi?id=115270

Reviewed by Benjamin Poulain.

Tools:

Prevent dumping the pixel output when Web Audio tests are dumping output data
as the testing output. Pixel output in these tests has no real meaning and is
as such unnecessary.

* WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::TestRunner::setAudioData):

LayoutTests:

Remove the now-unnecessary pixel baselines for audio tests that were used on the EFL WK2 platform.

* platform/efl-wk2/webaudio/audiobuffersource-expected.png: Removed.
* platform/efl-wk2/webaudio/audiobuffersource-loop-points-expected.png: Removed.
* platform/efl-wk2/webaudio/audiobuffersource-multi-channels-expected.png: Removed.
* platform/efl-wk2/webaudio/audiobuffersource-playbackrate-expected.png: Removed.
* platform/efl-wk2/webaudio/codec-tests/aac/vbr-128kbps-44khz-expected.png: Removed.
* platform/efl-wk2/webaudio/codec-tests/wav/24bit-22khz-resample-expected.png: Removed.
* platform/efl-wk2/webaudio/codec-tests/wav/24bit-44khz-expected.png: Removed.
* platform/efl-wk2/webaudio/gain-expected.png: Removed.
* platform/efl-wk2/webaudio/mixing-expected.png: Removed.
* platform/efl-wk2/webaudio/oscillator-custom-expected.png: Removed.
* platform/efl-wk2/webaudio/oscillator-sawtooth-expected.png: Removed.
* platform/efl-wk2/webaudio/oscillator-sine-expected.png: Removed.
* platform/efl-wk2/webaudio/oscillator-square-expected.png: Removed.
* platform/efl-wk2/webaudio/oscillator-triangle-expected.png: Removed.
* platform/efl-wk2/webaudio/up-mixing-mono-51-expected.png: Removed.
* platform/efl-wk2/webaudio/up-mixing-mono-stereo-expected.png: Removed.
* platform/efl-wk2/webaudio/up-mixing-stereo-51-expected.png: Removed.


Canonical link: https://commits.webkit.org/133747@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149258 268f45cc-cd09-0410-ab3c-d52691b4dbfc